# freosc

./: .gitignore  CLAUDE.md  README.md  index.html  style.css  synth.js
.claude/: settings.local.json
.github/: test-workflow.md
.github/workflows/: release.yml
FreOSC-VST/: BUILD_STATUS.md  CMakeLists.txt  README.md  setup_development.md
FreOSC-VST/Documentation/: VST_Development_Guide.md
FreOSC-VST/Presets/: Factory_ModEnv_RateTest.json  Factory_PM_Tines.json  Factory_Wavefolder_Delay_Reverb.json  Factory_Wavefolder_Demo.json  Factory_Wavefolder_Parallel.json
FreOSC-VST/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
FreOSC-VST/Source/DSP/: FreOscCompressor.cpp  FreOscCompressor.h  FreOscDelay.cpp  FreOscDelay.h  FreOscEnvelope.cpp  FreOscEnvelope.h  FreOscFilter.cpp  FreOscFilter.h  FreOscLFO.cpp  FreOscLFO.h  FreOscLimiter.cpp  FreOscLimiter.h  FreOscNoiseGenerator.cpp  FreOscNoiseGenerator.h  FreOscOscillator.cpp  FreOscOscillator.h  FreOscPlateReverb.cpp  FreOscPlateReverb.h  FreOscReverb.cpp  FreOscReverb.h  FreOscSound.cpp  FreOscSound.h  FreOscTapeDelay.cpp  FreOscTapeDelay.h  FreOscVoice.cpp  FreOscVoice.h  FreOscWavefolder.cpp  FreOscWavefolder.h
FreOSC-VST/Source/Parameters/: FreOscParameters.cpp  FreOscParameters.h
FreOSC-VST/Source/Presets/: JsonPresetManager.cpp  JsonPresetManager.h
